# my-mcp-server

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  noxfile.py  pyproject.toml  uv-new-project-setup.sh
.codex/: setup.sh
.github/workflows/: ci.yml
docs/: architecture.md
my_mcp_server/: analyzer.py
tests/: AGENTS.md  test_analyzer.py  test_my_mcp_server.py
tests/sample_repo/: A.py  B.py
