[project]
name = "my-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Your runtime dependencies go here
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Explicitly tell hatchling where the package is
[tool.hatch.build.targets.wheel]
packages = ["my_mcp_server"]

[tool.uv]
dev-dependencies = [
    "pyink>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.0.0",
]

# Tool configurations
[tool.pyink]
line-length = 88
target-version = ['py310']
pyink-indentation = 2
pyink-use-majority-quotes = true

[tool.ruff]
line-length = 88
indent-width = 2
target-version = "py310"


[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=my_mcp_server --cov-report=term-missing"
